# Ai4Space-Page

./: .pdm-python  app.py  pyproject.toml  run_server.sh
backend/: app.py
docs/: CNAME  animation.js  app.js  call4paper.html  challenge.html  committee.html  committee_app.js  countdown.js  index.html  program.html  style.css
docs/data/: committee.json  speakers.json
frontend/: animation.js  app.js  challenge_detail.html  challenge_detail_app.js  committee.html  index.html  style.css  track_detail.html  track_detail_app.js
src/: list_organizers.txt  list_speakers.txt  topics.txt
src/Styles/: neurips_2024.sty
standalone/: animation.js  call4paper.html  challenge_detail.html  committee.html  committee_app.js  countdown-style.css  countdown.js  index.html  program.html  style.css
standalone/data/: topics.json
